--- a/package.json
+++ b/package.json
@@ -3,7 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cookie-parser": "^1.4.4",
+    "express-session": "^1.16.1",
+    "fs": "0.0.1-security",
+    "ip": "^1.1.5",
+    "line-reader": "^0.4.0",
+    "line-reader-sync": "^0.1.0",
+    "nedb": "^1.8.0",
     "react": "^16.8.6",
+    "react-cookie": "^4.0.0",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
